# todo_list

./: .dockerignore  .gitignore  Dockerfile  README.md  down.sh  pyproject.toml  serve.sh  setup.sh  up.sh
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  setup.sh
data/: entries.json  lists.json  todos.json
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: index.html  styles.scss
frontend/src/app/: app.component.scss  app.component.ts  app.routes.ts
frontend/src/app/pages/documentation/: documentation.component.html  documentation.component.ts
frontend/src/app/shared/: shared.module.ts
frontend/src/app/shared/components/: README.md  components.module.ts
frontend/src/app/shared/components/organisms/: organisms.module.ts
frontend/src/app/shared/components/organisms/api-documentation/: api-documentation.component.html  api-documentation.component.spec.ts  api-documentation.component.ts
frontend/src/assets/: swagger-theme.css
frontend/src/assets/openApi/: documentation.yaml
todo_list/: main.py
todo_list/controllers/: __init__.py  lists.py  todos.py  validations.py
todo_list/core/: data_manager.py  data_store_manager.py
todo_list/managers/: __init__.py
todo_list/models/: __init__.py  lists.py  todos.py
todo_list/models/_entities/: __init__.py  base_entity.py  entries.py  lists.py  todos.py
