[tool.poetry]
name = "todo-list"
version = "0.1.0"
description = ""
authors = ["LimpidCrypto <konermann@limpidcrypto.com>"]
readme = "README.md"
packages = [{include = "todo_list"}]

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^3.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
